--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "Query",
 		"Storage",
 		"Bank",
-		"php7.4"
+		"PHP 8.0"
     ],
     "authors": [
         {
@@ -17,7 +17,7 @@
         }
     ],
 	"require": {
-		"php": ">=7.4"
+		"php": ">=8.0"
 	},
 	"autoload": {
 		"psr-4": {
